@@ -1,14 +1,18 @@
 package org.example.controllers;
 
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.geometry.Insets;
+import javafx.geometry.Pos;
+import javafx.scene.Node;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
+import javafx.scene.effect.ColorAdjust;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.*;
@@ -16,163 +20,259 @@ import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
 import javafx.scene.text.FontWeight;
 import javafx.stage.Stage;
+import org.example.models.CartItem;
+import org.example.models.Favoris;
 import org.example.models.Produit;
+import org.example.models.User;
+import org.example.services.CartItemServices;
+import org.example.services.CommandeServices;
+import org.example.services.FavorisServices;
 import org.example.services.ProduitServices;
+import org.example.util.SessionManager;
 
 import java.io.File;
-import java.io.IOException;
 import java.net.URL;
+import java.sql.Date;
+import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
+import java.util.Comparator;
 import java.util.List;
+import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 public class ShowProduitFrontController {
 
-    @FXML
-    private AnchorPane anchorPane;
+    private static final Logger LOGGER = Logger.getLogger(ShowProduitFrontController.class.getName());
+    private static final Color PRIMARY_COLOR = Color.web("#30b4b4");
+    private static final Color SECONDARY_COLOR = Color.web("#2f3ff1");
+    private static final double DEFAULT_WINDOW_WIDTH = 1280.0;
+    private static final double DEFAULT_WINDOW_HEIGHT = 720.0;
 
-    @FXML
-    private TilePane productTilePane;
+    @FXML private AnchorPane anchorPane;
+    @FXML private TilePane productTilePane;
+    @FXML private TextField productSearchField;
+    @FXML private Slider priceRangeSlider;
+    @FXML private Label minPriceLabel;
+    @FXML private Label maxPriceLabel;
+    @FXML private Label currentPriceLabel;
+    @FXML private Label cartCountLabel;
+    @FXML private HBox paginationContainer;
+    @FXML private ComboBox<String> itemsPerPageComboBox;
+    @FXML private ComboBox<String> sortComboBox;
 
-    @FXML
-    private TextField productSearchField;
-
-    @FXML
-    private Slider priceRangeSlider;
-
-    @FXML
-    private Label maxPriceLabel;
-
-    @FXML
-    private Label cartCountLabel;
-
-    @FXML
-    private HBox paginationContainer;
-
-    private ProduitServices ps = new ProduitServices();
-
-    private int currentPage = 1;
-    private int itemsPerPage = 36;
-    private int totalPages = 1;
+    private final ProduitServices produitServices = new ProduitServices();
+    private final CartItemServices cartItemServices = new CartItemServices();
+    private final FavorisServices favorisServices = new FavorisServices();
     private List<Produit> allProducts;
     private ObservableList<Produit> filteredProducts;
-
-    private final Color PRIMARY_COLOR = Color.web("#30b4b4");
-    private final Color SECONDARY_COLOR = Color.web("#2f3ff1");
+    private int currentPage = 1;
+    private int itemsPerPage = 10;
+    private int totalPages = 1;
+    private boolean isPriceFilterApplied = false;
 
     @FXML
     void initialize() {
-        // Use Platform.runLater to ensure this happens after JavaFX initialization
-        javafx.application.Platform.runLater(() -> {
-            if (anchorPane.getScene() != null) {
-                Stage stage = (Stage) anchorPane.getScene().getWindow();
-                stage.setMaximized(true);
-                setupResponsiveLayout();
-            }
+        Platform.runLater(() -> {
+            Stage stage = (Stage) anchorPane.getScene().getWindow();
+            setStageSize(stage);
+            setupResponsiveLayout();
         });
 
-        // Rest of your initialization code remains the same...
         updateCartCount();
-
-        // Set up price slider listener
-        priceRangeSlider.valueProperty().addListener((obs, oldVal, newVal) -> {
-            maxPriceLabel.setText(String.format("€%.2f", newVal.doubleValue()));
-        });
-
-        // Load all products
+        setupItemsPerPageComboBox();
+        setupSortComboBox();
         loadAllProducts();
-
-        // Render initial page of products
+        setupPriceSlider();
         renderProductsPage(currentPage);
-
-        // Create pagination
         createPagination();
     }
 
+    private void setupItemsPerPageComboBox() {
+        if (itemsPerPageComboBox != null) {
+            itemsPerPageComboBox.getItems().setAll("10", "20", "30");
+            itemsPerPageComboBox.setValue("10");
+            itemsPerPageComboBox.setOnAction(event -> {
+                itemsPerPage = Integer.parseInt(itemsPerPageComboBox.getValue());
+                totalPages = (int) Math.ceil((double) filteredProducts.size() / itemsPerPage);
+                currentPage = 1;
+                renderProductsPage(currentPage);
+                createPagination();
+            });
+        }
+    }
+
+    private void setupSortComboBox() {
+        if (sortComboBox != null) {
+            sortComboBox.getItems().setAll("Recommandation", "Prix: Bas à Haut", "Prix: Haut à Bas", "Nouveautés");
+            sortComboBox.setValue("Nouveautés");
+            sortComboBox.setOnAction(event -> applySorting());
+        }
+    }
+
+    private void setStageSize(Stage stage) {
+        stage.setWidth(DEFAULT_WINDOW_WIDTH);
+        stage.setHeight(DEFAULT_WINDOW_HEIGHT);
+        stage.setMaximized(false);
+        stage.centerOnScreen();
+    }
+
     private void setupResponsiveLayout() {
-        // Ensure anchorPane fills entire window
         AnchorPane.setTopAnchor(anchorPane, 0.0);
         AnchorPane.setBottomAnchor(anchorPane, 0.0);
         AnchorPane.setLeftAnchor(anchorPane, 0.0);
         AnchorPane.setRightAnchor(anchorPane, 0.0);
 
-        // Make the productTilePane adjust its columns based on window width
         if (productTilePane != null) {
-            productTilePane.prefWidthProperty().bind(anchorPane.widthProperty().subtract(300)); // 250px for sidebar + padding
-
-            // Adjust the tile pane columns dynamically based on the window size
+            productTilePane.prefWidthProperty().bind(anchorPane.widthProperty().subtract(270));
+            productTilePane.prefHeightProperty().bind(anchorPane.heightProperty().subtract(300));
             productTilePane.prefWidthProperty().addListener((obs, oldVal, newVal) -> {
-                // Calculate optimal number of columns based on available width
                 int availableWidth = newVal.intValue();
                 int cardWidth = 300;
                 int gap = 20;
-                int columns = Math.max(1, availableWidth / (cardWidth + gap));
-
+                int columns = Math.max(1, Math.min(3, availableWidth / (cardWidth + gap)));
                 productTilePane.setPrefColumns(columns);
             });
         }
 
-        // Make sure the ScrollPane containing the TilePane also expands
-        if (productTilePane.getParent() instanceof ScrollPane) {
-            ScrollPane scrollPane = (ScrollPane) productTilePane.getParent();
+        if (productTilePane.getParent() instanceof ScrollPane scrollPane) {
             scrollPane.setFitToWidth(true);
             scrollPane.setFitToHeight(true);
+            scrollPane.prefHeightProperty().bind(anchorPane.heightProperty().subtract(300));
+            scrollPane.prefWidthProperty().bind(anchorPane.widthProperty().subtract(270));
         }
     }
 
     private void loadAllProducts() {
-        allProducts = ps.showProduit();
-        filteredProducts = FXCollections.observableArrayList(allProducts);
-        totalPages = (int) Math.ceil((double) filteredProducts.size() / itemsPerPage);
+        try {
+            allProducts = produitServices.showProduit();
+            allProducts.sort(Comparator.comparingDouble(Produit::getPrix));
+            filteredProducts = FXCollections.observableArrayList(allProducts);
+            totalPages = (int) Math.ceil((double) filteredProducts.size() / itemsPerPage);
+            LOGGER.info("Loaded " + allProducts.size() + " products, total pages: " + totalPages);
+        } catch (Exception e) {
+            LOGGER.severe("Error loading products: " + e.getMessage());
+            showAlert(Alert.AlertType.ERROR, "Error", "Failed to load products", e.getMessage());
+        }
+    }
+
+    private void setupPriceSlider() {
+        if (allProducts == null || allProducts.isEmpty()) {
+            priceRangeSlider.setDisable(true);
+            minPriceLabel.setText("€0.00");
+            maxPriceLabel.setText("€0.00");
+            currentPriceLabel.setText("€0.00");
+            return;
+        }
+
+        double minPrice = allProducts.stream().mapToDouble(Produit::getPrix).min().orElse(0.0);
+        double maxPrice = allProducts.stream().mapToDouble(Produit::getPrix).max().orElse(1000.0);
+
+        priceRangeSlider.setMin(minPrice);
+        priceRangeSlider.setMax(maxPrice);
+        priceRangeSlider.setValue(maxPrice);
+        priceRangeSlider.setMajorTickUnit((maxPrice - minPrice) / 10);
+        priceRangeSlider.setMinorTickCount(5);
+        priceRangeSlider.setShowTickMarks(true);
+        priceRangeSlider.setShowTickLabels(false);
+        minPriceLabel.setText(String.format("€%.2f", minPrice));
+        maxPriceLabel.setText(String.format("€%.2f", maxPrice));
+        currentPriceLabel.setText("All Prices");
+
+        priceRangeSlider.valueProperty().addListener((obs, oldVal, newVal) -> {
+            if (!isPriceFilterApplied) {
+                isPriceFilterApplied = true;
+            }
+            currentPriceLabel.setText(String.format("€%.2f", newVal.doubleValue()));
+            filterProductsByPrice(newVal.doubleValue());
+        });
     }
 
     @FXML
     void performSearch() {
         String searchTerm = productSearchField.getText().toLowerCase().trim();
-
         if (searchTerm.isEmpty()) {
-            // Reset to show all products
             filteredProducts.setAll(allProducts);
         } else {
-            // Filter products based on search term
-            filteredProducts.setAll(allProducts.stream()
+            List<Produit> filteredList = allProducts.stream()
                     .filter(p -> p.getNom().toLowerCase().contains(searchTerm) ||
                             p.getDescription().toLowerCase().contains(searchTerm))
-                    .toList());
+                    .collect(Collectors.toList());
+            filteredProducts.setAll(filteredList);
         }
 
-        // Update pagination
+        if (isPriceFilterApplied) {
+            filterProductsByPrice(priceRangeSlider.getValue());
+        } else {
+            applySorting();
+        }
+
         totalPages = (int) Math.ceil((double) filteredProducts.size() / itemsPerPage);
         currentPage = 1;
-
-        // Refresh display
+        LOGGER.info("Search performed, total pages: " + totalPages);
         renderProductsPage(currentPage);
         createPagination();
     }
 
-    @FXML
-    void applyPriceFilter() {
-        double maxPrice = priceRangeSlider.getValue();
-
-        filteredProducts.setAll(allProducts.stream()
+    private void filterProductsByPrice(double maxPrice) {
+        List<Produit> filteredList = allProducts.stream()
                 .filter(p -> p.getPrix() <= maxPrice)
-                .toList());
+                .filter(p -> {
+                    String searchTerm = productSearchField.getText().toLowerCase().trim();
+                    return searchTerm.isEmpty() ||
+                            p.getNom().toLowerCase().contains(searchTerm) ||
+                            p.getDescription().toLowerCase().contains(searchTerm);
+                })
+                .sorted(Comparator.comparingDouble(Produit::getPrix))
+                .collect(Collectors.toList());
 
-        // Update pagination
+        filteredProducts.setAll(filteredList);
         totalPages = (int) Math.ceil((double) filteredProducts.size() / itemsPerPage);
         currentPage = 1;
+        LOGGER.info("Price filter applied, total pages: " + totalPages);
+        renderProductsPage(currentPage);
+        createPagination();
+    }
 
-        // Refresh display
+    private void applySorting() {
+        String sortOption = sortComboBox.getValue();
+        List<Produit> sortedList = filteredProducts.stream()
+                .filter(p -> !isPriceFilterApplied || p.getPrix() <= priceRangeSlider.getValue())
+                .filter(p -> {
+                    String searchTerm = productSearchField.getText().toLowerCase().trim();
+                    return searchTerm.isEmpty() ||
+                            p.getNom().toLowerCase().contains(searchTerm) ||
+                            p.getDescription().toLowerCase().contains(searchTerm);
+                })
+                .collect(Collectors.toList());
+
+        switch (sortOption) {
+            case "Prix: Bas à Haut":
+                sortedList.sort(Comparator.comparingDouble(Produit::getPrix));
+                break;
+            case "Prix: Haut à Bas":
+                sortedList.sort(Comparator.comparingDouble(Produit::getPrix).reversed());
+                break;
+            case "Nouveautés":
+                sortedList.sort(Comparator.comparing(Produit::getDate, Comparator.nullsLast(Comparator.reverseOrder())));
+                break;
+            case "Recommandation":
+            default:
+                break;
+        }
+
+        filteredProducts.setAll(sortedList);
+        totalPages = (int) Math.ceil((double) filteredProducts.size() / itemsPerPage);
+        currentPage = 1;
         renderProductsPage(currentPage);
         createPagination();
     }
 
     private void renderProductsPage(int page) {
-        // Clear existing products
         productTilePane.getChildren().clear();
-
         int startIndex = (page - 1) * itemsPerPage;
         int endIndex = Math.min(startIndex + itemsPerPage, filteredProducts.size());
+        LOGGER.info("Rendering page " + page + ": products " + startIndex + " to " + endIndex);
 
-        // Add products for current page
         for (int i = startIndex; i < endIndex; i++) {
             VBox productCard = createProductCard(filteredProducts.get(i));
             productTilePane.getChildren().add(productCard);
@@ -181,12 +281,10 @@ public class ShowProduitFrontController {
 
     private void createPagination() {
         paginationContainer.getChildren().clear();
-
         if (totalPages <= 1) {
-            return; // No pagination needed
+            return;
         }
 
-        // Previous button
         Button prevButton = new Button("«");
         stylePageButton(prevButton, false);
         prevButton.setDisable(currentPage == 1);
@@ -197,7 +295,6 @@ public class ShowProduitFrontController {
         });
         paginationContainer.getChildren().add(prevButton);
 
-        // Page buttons
         int startPage = Math.max(1, currentPage - 2);
         int endPage = Math.min(totalPages, startPage + 4);
 
@@ -209,7 +306,6 @@ public class ShowProduitFrontController {
             paginationContainer.getChildren().add(pageButton);
         }
 
-        // Next button
         Button nextButton = new Button("»");
         stylePageButton(nextButton, false);
         nextButton.setDisable(currentPage == totalPages);
@@ -222,11 +318,9 @@ public class ShowProduitFrontController {
     }
 
     private void stylePageButton(Button button, boolean isActive) {
-        if (isActive) {
-            button.setStyle("-fx-background-color: #30b4b4; -fx-text-fill: white; -fx-min-width: 40px; -fx-min-height: 40px; -fx-background-radius: 4px;");
-        } else {
-            button.setStyle("-fx-background-color: white; -fx-text-fill: #333; -fx-border-color: #dee2e6; -fx-min-width: 40px; -fx-min-height: 40px; -fx-background-radius: 4px;");
-        }
+        button.setStyle(isActive
+                ? "-fx-background-color: #30b4b4; -fx-text-fill: white; -fx-font-weight: bold; -fx-min-width: 40px; -fx-min-height: 40px; -fx-background-radius: 4px;"
+                : "-fx-background-color: white; -fx-text-fill: #333; -fx-border-color: #dee2e6; -fx-border-width: 1px; -fx-min-width: 40px; -fx-min-height: 40px; -fx-background-radius: 4px;");
     }
 
     private void navigateToPage(int page) {
@@ -236,55 +330,62 @@ public class ShowProduitFrontController {
     }
 
     private VBox createProductCard(Produit produit) {
-        // Create main container
-        VBox card = new VBox(8);
+        VBox card = new VBox(10);
         card.setPrefWidth(300);
-        card.setPrefHeight(420);
-        card.setPadding(new Insets(0));
-        card.setStyle("-fx-background-color: white; -fx-border-color: #f0f0f0; -fx-border-width: 1; -fx-border-radius: 4;");
+        card.setPrefHeight(450);
+        card.setPadding(new Insets(10));
+        card.setStyle("-fx-background-color: white; -fx-border-color: #e0e0e0; -fx-border-width: 1; -fx-border-radius: 8; -fx-background-radius: 8;");
 
-        // Brand label at top
-        Label brandLabel = new Label("Brand");
-        brandLabel.setStyle("-fx-text-fill: #777777; -fx-font-size: 14px; -fx-padding: 10 15 10 15;");
+        boolean isOutOfStock = produit.getStock_quantite() <= 0;
+        StackPane badgeContainer = new StackPane();
+        badgeContainer.setAlignment(Pos.TOP_RIGHT);
+        badgeContainer.setPadding(new Insets(10));
 
-        // Product Image Container
+        boolean isNew = false;
+        Date sqlDate = produit.getDate();
+        if (sqlDate != null) {
+            isNew = ChronoUnit.DAYS.between(sqlDate.toLocalDate(), LocalDate.now()) <= 7;
+        }
+
+        if (isNew || isOutOfStock) {
+            Label badgeLabel = new Label(isNew ? "New" : "Rupture de stock");
+            badgeLabel.setStyle("-fx-background-color: " + (isNew ? "#4caf50" : "#f44336") +
+                    "; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold; -fx-padding: 5 10; -fx-background-radius: 12;");
+            badgeContainer.getChildren().add(badgeLabel);
+        }
+
         StackPane imageContainer = new StackPane();
-        imageContainer.setPrefHeight(250);
-        imageContainer.setStyle("-fx-background-color: #f9f9f9;");
+        imageContainer.setPrefHeight(220);
+        imageContainer.setStyle("-fx-background-color: #f5f5f5; -fx-border-radius: 6;");
 
-        // Product Image
         ImageView imageView = new ImageView();
-        String imageName = produit.getImage();
-        loadProductImage(imageView, imageName);
-
-        imageView.setFitWidth(250);
-        imageView.setFitHeight(200);
+        loadProductImage(imageView, produit.getImage());
+        imageView.setFitWidth(200);
+        imageView.setFitHeight(180);
         imageView.setPreserveRatio(true);
+
+        if (isOutOfStock) {
+            ColorAdjust grayscale = new ColorAdjust();
+            grayscale.setSaturation(-1);
+            imageView.setEffect(grayscale);
+        }
         imageContainer.getChildren().add(imageView);
 
-        // Product Info Container
-        VBox infoContainer = new VBox(5);
-        infoContainer.setPadding(new Insets(15));
+        VBox infoContainer = new VBox(8);
+        infoContainer.setPadding(new Insets(10));
 
-        // Product Name
         Label nameLabel = new Label(produit.getNom());
         nameLabel.setWrapText(true);
-        nameLabel.setFont(Font.font("System", FontWeight.MEDIUM, 16));
-        nameLabel.setStyle("-fx-text-fill: #333333;");
+        nameLabel.setFont(Font.font("System", FontWeight.BOLD, 16));
+        nameLabel.setStyle("-fx-text-fill: #222222;");
 
-        // Product SKU/ID - Fixed the primitive int issue
-        String skuText = "ks" + String.format("%07d", produit.getId() > 0 ? produit.getId() : (int)(Math.random() * 10000000));
+        String skuText = "SKU: " + String.format("%07d", produit.getId() > 0 ? produit.getId() : (int) (Math.random() * 10000000));
         Label skuLabel = new Label(skuText);
         skuLabel.setFont(Font.font("System", 12));
-        skuLabel.setStyle("-fx-text-fill: #777777;");
+        skuLabel.setStyle("-fx-text-fill: #666666;");
 
-        // Price Section with "from" text
-        HBox priceBox = new HBox(5);
-        priceBox.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
-
-        Label fromLabel = new Label("from");
-        fromLabel.setFont(Font.font("System", 12));
-        fromLabel.setStyle("-fx-text-fill: #777777;");
+        HBox priceBox = new HBox(8);
+        priceBox.setAlignment(Pos.CENTER_LEFT);
 
         Label priceLabel = new Label(String.format("%.2f TND", produit.getPrix()));
         priceLabel.setFont(Font.font("System", FontWeight.BOLD, 18));
@@ -292,216 +393,237 @@ public class ShowProduitFrontController {
 
         Label taxLabel = new Label("ex. VAT*");
         taxLabel.setFont(Font.font("System", 12));
-        taxLabel.setStyle("-fx-text-fill: #777777;");
+        taxLabel.setStyle("-fx-text-fill: #888888;");
+        priceBox.getChildren().addAll(priceLabel, taxLabel);
 
-        priceBox.getChildren().addAll(fromLabel, priceLabel, taxLabel);
+        Button favoriteButton = new Button("♡");
+        boolean isFavorited = favorisServices.isFavorited(produit);
+        favoriteButton.getStyleClass().addAll("heart-button", isFavorited ? "heart-active" : "heart-inactive");
+        favoriteButton.setStyle("-fx-background-color: transparent; -fx-font-size: 20px; -fx-padding: 5;");
+        favoriteButton.setOnAction(e -> toggleFavorite(produit, favoriteButton));
+        if (isOutOfStock) {
+            favoriteButton.setDisable(true);
+        }
 
-        // Add To Cart Button
-        Button addToCartBtn = new Button("commande");
-        addToCartBtn.setPrefWidth(Double.MAX_VALUE);
-        addToCartBtn.setPrefHeight(40);
-        addToCartBtn.setStyle("-fx-background-color: #30b4b4; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 4;");
-        addToCartBtn.setOnAction(e -> handleAddToCart(produit));
+        HBox buttonBox = new HBox(10);
+        buttonBox.setAlignment(Pos.CENTER_RIGHT);
+        buttonBox.getChildren().add(favoriteButton);
 
-        // Add elements to info container
-        infoContainer.getChildren().addAll(nameLabel, skuLabel, priceBox, addToCartBtn);
+        infoContainer.getChildren().addAll(nameLabel, skuLabel, priceBox, buttonBox);
+        card.getChildren().addAll(badgeContainer, imageContainer, infoContainer);
 
-        // Add all components to card
-        card.getChildren().addAll(brandLabel, imageContainer, infoContainer);
+        if (!isOutOfStock) {
+            card.setOnMouseEntered(e -> {
+                card.setStyle("-fx-background-color: white; -fx-border-color: #30b4b4; -fx-border-width: 1; -fx-border-radius: 8; -fx-background-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 10, 0, 0, 2);");
+                card.setScaleX(1.03);
+                card.setScaleY(1.03);
+            });
+            card.setOnMouseExited(e -> {
+                card.setStyle("-fx-background-color: white; -fx-border-color: #e0e0e0; -fx-border-width: 1; -fx-border-radius: 8; -fx-background-radius: 8;");
+                card.setScaleX(1.0);
+                card.setScaleY(1.0);
+            });
+            card.setOnMouseClicked(e -> navigateToProductDetails(produit));
+        } else {
+            card.setMouseTransparent(true);
+            card.setStyle("-fx-background-color: white; -fx-border-color: #e0e0e0; -fx-border-width: 1; -fx-border-radius: 8; -fx-background-radius: 8; -fx-opacity: 0.7;");
+        }
 
-        // Add hover effect
-        card.setOnMouseEntered(e -> {
-            card.setStyle("-fx-background-color: white; -fx-border-color: #30b4b4; -fx-border-width: 1; -fx-border-radius: 4;");
-        });
-
-        card.setOnMouseExited(e -> {
-            card.setStyle("-fx-background-color: white; -fx-border-color: #f0f0f0; -fx-border-width: 1; -fx-border-radius: 4;");
-        });
+        try {
+            card.getStylesheets().add(getClass().getResource("/fxml/front/heart-animation.css").toExternalForm());
+        } catch (Exception e) {
+            LOGGER.warning("Failed to load heart-animation.css: " + e.getMessage());
+        }
 
         return card;
     }
 
-    private void loadProductImage(ImageView imageView, String imageName) {
-        // Debug output
-        System.out.println("Attempting to load image: " + imageName);
+    private void toggleFavorite(Produit produit, Button favoriteButton) {
+        try {
+            SessionManager session = SessionManager.getInstance();
+            Object currentUser = session.getCurrentUser();
+            if (!(currentUser instanceof User)) {
+                showAlert(Alert.AlertType.ERROR, "Erreur", "Utilisateur non authentifié", "Veuillez vous connecter pour ajouter aux favoris.");
+                return;
+            }
 
+            if (favorisServices.isFavorited(produit)) {
+                favorisServices.removeByProduit(produit);
+                favoriteButton.getStyleClass().remove("heart-active");
+                favoriteButton.getStyleClass().add("heart-inactive");
+                showAlert(Alert.AlertType.INFORMATION, "Removed from Favorites", "Product Removed",
+                        produit.getNom() + " has been removed from your favorites.");
+            } else {
+                int utilisateurId = ((User) currentUser).getId();
+                Favoris favoris = new Favoris(produit, utilisateurId);
+                favorisServices.addProduit(favoris);
+                favoriteButton.getStyleClass().remove("heart-inactive");
+                favoriteButton.getStyleClass().add("heart-active");
+                showAlert(Alert.AlertType.INFORMATION, "Added to Favorites", "Product Added",
+                        produit.getNom() + " has been added to your favorites.");
+            }
+        } catch (RuntimeException e) {
+            LOGGER.severe("Error toggling favorite for product " + produit.getNom() + ": " + e.getMessage());
+            showAlert(Alert.AlertType.ERROR, "Favorite Error", "Failed to update favorites", "An error occurred while updating favorites: " + e.getMessage());
+            boolean isFavorited = favorisServices.isFavorited(produit);
+            favoriteButton.getStyleClass().removeAll("heart-active", "heart-inactive");
+            favoriteButton.getStyleClass().add(isFavorited ? "heart-active" : "heart-inactive");
+        }
+    }
+
+    private void navigateToProductDetails(Produit produit) {
+        try {
+            URL fxmlLocation = getClass().getResource("/fxml/front/detailsProduit.fxml");
+            if (fxmlLocation == null) {
+                throw new IllegalStateException("FXML file not found: /fxml/front/detailsProduit.fxml");
+            }
+
+            FXMLLoader loader = new FXMLLoader(fxmlLocation);
+            Parent root = loader.load();
+            DetailsProduitController controller = loader.getController();
+            controller.setProduit(produit);
+
+            Scene scene = new Scene(root);
+            Stage stage = (Stage) anchorPane.getScene().getWindow();
+            stage.setScene(scene);
+            setStageSize(stage);
+            stage.show();
+        } catch (Exception e) {
+            LOGGER.severe("Error navigating to product details: " + e.getMessage());
+            showAlert(Alert.AlertType.ERROR, "Navigation Error", "Error opening product details", e.getMessage());
+        }
+    }
+
+    private void handleAddToCart(Produit produit) {
+        if (produit == null) {
+            showAlert(Alert.AlertType.ERROR, "Error", "No Product", "The selected product is null.");
+            return;
+        }
+
+        if (produit.getStock_quantite() <= 0) {
+            showAlert(Alert.AlertType.WARNING, "Out of Stock", "This product is currently out of stock", "Please check back later or browse our other products.");
+            return;
+        }
+
+        try {
+            SessionManager session = SessionManager.getInstance();
+            Object currentUser = session.getCurrentUser();
+            if (!(currentUser instanceof User)) {
+                showAlert(Alert.AlertType.ERROR, "Erreur", "Utilisateur non authentifié", "Veuillez vous connecter pour ajouter au panier.");
+                return;
+            }
+            int utilisateurId = ((User) currentUser).getId();
+
+            URL fxmlLocation = getClass().getResource("/fxml/front/showCartItem.fxml");
+            if (fxmlLocation == null) {
+                throw new IllegalStateException("FXML file not found: /fxml/front/showCartItem.fxml");
+            }
+
+            FXMLLoader loader = new FXMLLoader(fxmlLocation);
+            Parent root = loader.load();
+            ShowCartItemController controller = loader.getController();
+            if (controller == null) {
+                throw new IllegalStateException("ShowCartItemController is null after loading FXML");
+            }
+
+            List<CartItem> currentCartItems = cartItemServices.showProduit();
+            boolean itemExists = currentCartItems.stream()
+                    .anyMatch(item -> item.getProduitId() == produit.getId() &&
+                            item.getUtilisateurId() == utilisateurId &&
+                            (item.getCommandeId() == 0 || "pending".equals(controller.getCommandePaymentStatus(item))));
+
+            if (itemExists) {
+                showAlert(Alert.AlertType.WARNING, "Item Already in Cart", "This product is already in your cart", "You can adjust the quantity in the cart page.");
+                return;
+            }
+
+            CartItem cartItem = new CartItem(produit.getId(), 0, 1, utilisateurId);
+            cartItem.setProduit(produit);
+            controller.addToCart(cartItem);
+            updateCartCount();
+
+            Scene scene = new Scene(root);
+            Stage stage = (Stage) anchorPane.getScene().getWindow();
+            stage.setScene(scene);
+            stage.setTitle("Panier");
+            setStageSize(stage);
+            stage.show();
+        } catch (Exception e) {
+            LOGGER.severe("Error navigating to cart: " + e.getMessage());
+            showAlert(Alert.AlertType.ERROR, "Navigation Error", "Error opening cart", e.getMessage());
+        }
+    }
+
+    private void loadProductImage(ImageView imageView, String imageName) {
         if (imageName == null || imageName.trim().isEmpty()) {
-            System.out.println("Image name is null or empty, loading placeholder");
             loadPlaceholderImage(imageView);
             return;
         }
 
-        boolean imageLoaded = false;
-
-        // First try: Direct path from src/resources/images
-        try {
-            String imagePath = "src/resources/images/" + imageName;
-            File imageFile = new File(imagePath);
-            if (imageFile.exists() && imageFile.isFile()) {
-                Image image = new Image(imageFile.toURI().toString());
-                imageView.setImage(image);
-                System.out.println("Image loaded successfully from: " + imagePath);
-                return;
-            } else {
-                System.out.println("File not found at: " + imagePath);
-            }
-        } catch (Exception e) {
-            System.out.println("Error loading from direct path: " + e.getMessage());
-        }
-
-        // Second try: Load from classpath resource
         try {
             URL resourceUrl = getClass().getResource("/images/" + imageName);
             if (resourceUrl != null) {
-                Image image = new Image(resourceUrl.toExternalForm());
-                imageView.setImage(image);
-                System.out.println("Image loaded successfully from resources: /images/" + imageName);
+                imageView.setImage(new Image(resourceUrl.toExternalForm()));
                 return;
-            } else {
-                System.out.println("Resource not found: /images/" + imageName);
             }
-        } catch (Exception e) {
-            System.out.println("Error loading from resources: " + e.getMessage());
+        } catch (Exception ignored) {
         }
 
-        // Try other resource paths
-        String[] resourcePaths = {
-                "/resources/images/" + imageName,
-                "/front/images/" + imageName,
-                "/front/images/products/" + imageName
-        };
-
-        for (String path : resourcePaths) {
-            try {
-                URL resourceUrl = getClass().getResource(path);
-                if (resourceUrl != null) {
-                    Image image = new Image(resourceUrl.toExternalForm());
-                    imageView.setImage(image);
-                    System.out.println("Image loaded successfully from: " + path);
-                    return;
-                } else {
-                    System.out.println("Resource not found: " + path);
-                }
-            } catch (Exception e) {
-                System.out.println("Error loading from " + path + ": " + e.getMessage());
-            }
-        }
-
-        // Try loading as external URL if it starts with http
-        if (imageName.startsWith("http://") || imageName.startsWith("https://")) {
-            try {
-                Image image = new Image(imageName);
-                imageView.setImage(image);
-                System.out.println("Image loaded successfully from URL: " + imageName);
-                return;
-            } catch (Exception e) {
-                System.out.println("Error loading from URL: " + e.getMessage());
-            }
-        }
-
-        // Last resort: Try absolute file path
         try {
-            File file = new File(imageName);
+            File file = new File("src/main/resources/images/" + imageName);
             if (file.exists() && file.isFile()) {
-                Image image = new Image(file.toURI().toString());
-                imageView.setImage(image);
-                System.out.println("Image loaded successfully from absolute path: " + imageName);
+                imageView.setImage(new Image(file.toURI().toString()));
                 return;
-            } else {
-                System.out.println("File not found at absolute path: " + imageName);
             }
-        } catch (Exception e) {
-            System.out.println("Error loading from absolute path: " + e.getMessage());
+        } catch (Exception ignored) {
         }
 
-        // If all attempts failed, load placeholder
-        System.out.println("All image loading attempts failed, loading placeholder");
         loadPlaceholderImage(imageView);
     }
 
     private void loadPlaceholderImage(ImageView imageView) {
         try {
-            // First try to load from resources
             URL placeholderUrl = getClass().getResource("/images/product-placeholder.png");
             if (placeholderUrl != null) {
-                Image placeholder = new Image(placeholderUrl.toExternalForm());
-                imageView.setImage(placeholder);
-                System.out.println("Placeholder loaded from resources");
-                return;
-            }
-
-            // Second try: direct file path
-            File placeholderFile = new File("src/resources/images/product-placeholder.png");
-            if (placeholderFile.exists() && placeholderFile.isFile()) {
-                Image placeholder = new Image(placeholderFile.toURI().toString());
-                imageView.setImage(placeholder);
-                System.out.println("Placeholder loaded from file system");
-                return;
-            }
-
-            // Last resort: create a default image
-            System.out.println("No placeholder found, setting empty image");
-            imageView.setImage(null);
-            StackPane parent = (StackPane) imageView.getParent();
-            if (parent != null) {
-                parent.setStyle("-fx-background-color: #f5f5f5;");
+                imageView.setImage(new Image(placeholderUrl.toExternalForm()));
+            } else {
+                imageView.setImage(null);
+                if (imageView.getParent() instanceof StackPane parent) {
+                    parent.setStyle("-fx-background-color: #f5f5f5; -fx-border-radius: 6;");
+                }
             }
         } catch (Exception e) {
-            System.out.println("Failed to load placeholder image: " + e.getMessage());
             imageView.setImage(null);
-            StackPane parent = (StackPane) imageView.getParent();
-            if (parent != null) {
-                parent.setStyle("-fx-background-color: #f5f5f5;");
+            if (imageView.getParent() instanceof StackPane parent) {
+                parent.setStyle("-fx-background-color: #f5f5f5; -fx-border-radius: 6;");
             }
-        }
-    }
-
-    private void handleAddToCart(Produit produit) {
-        if (produit.getStock_quantite() <= 0) {
-            showAlert(Alert.AlertType.WARNING, "Out of Stock",
-                    "This product is currently out of stock",
-                    "Please check back later or browse our other products.");
-            return;
-        }
-
-        // Increment cart count
-        int currentCount = Integer.parseInt(cartCountLabel.getText());
-        cartCountLabel.setText(String.valueOf(currentCount + 1));
-
-        // Open the addCommande.fxml file
-        try {
-            URL fxmlLocation = getClass().getResource("/fxml/front/addCommande.fxml");
-            if (fxmlLocation == null) {
-                throw new IllegalStateException("FXML file not found: /fxml/front/addCommande.fxml");
-            }
-
-            FXMLLoader loader = new FXMLLoader(fxmlLocation);
-            Parent root = loader.load();
-
-            // Pass the selected product to the controller
-            AddCommandeController controller = loader.getController();
-            controller.setSelectedProduct(produit);
-
-            Scene scene = new Scene(root);
-            Stage stage = new Stage();
-            stage.setScene(scene);
-            stage.setTitle("Ajouter une commande");
-            stage.show();
-        } catch (Exception e) {
-            e.printStackTrace();
-            showAlert(Alert.AlertType.ERROR, "Navigation Error",
-                    "Error opening commande form", e.getMessage());
         }
     }
 
     private void updateCartCount() {
-        // Initialize with 0 if not already set
         if (cartCountLabel != null) {
-            cartCountLabel.setText("0");
+            SessionManager session = SessionManager.getInstance();
+            Object currentUser = session.getCurrentUser();
+            int utilisateurId = currentUser instanceof User ? ((User) currentUser).getId() : 0;
+
+            List<CartItem> currentCartItems = cartItemServices.showProduit();
+            long count = currentCartItems.stream()
+                    .filter(item -> item.getUtilisateurId() == utilisateurId)
+                    .filter(item -> item.getCommandeId() == 0 || "pending".equals(getCommandePaymentStatus(item)))
+                    .count();
+            cartCountLabel.setText(String.valueOf(count));
         }
     }
 
-    // Helper method to show alerts
+    private String getCommandePaymentStatus(CartItem item) {
+        if (item.getCommandeId() == 0) {
+            return "pending";
+        }
+        CommandeServices commandeServices = new CommandeServices();
+        var commande = commandeServices.getoneProduit(item.getCommandeId());
+        return commande != null ? commande.getPaymentStatus() : "pending";
+    }
+
     private void showAlert(Alert.AlertType alertType, String title, String header, String content) {
         Alert alert = new Alert(alertType);
         alert.setTitle(title);
@@ -509,74 +631,175 @@ public class ShowProduitFrontController {
         alert.setContentText(content);
 
         try {
-            // Style the alert dialog if CSS file exists
             DialogPane dialogPane = alert.getDialogPane();
             dialogPane.getStylesheets().add(getClass().getResource("/styles/alert.css").toExternalForm());
-        } catch (Exception e) {
-            // CSS file not found, use default styling
+            dialogPane.getStylesheets().add(getClass().getResource("/fxml/front/heart-animation.css").toExternalForm());
+        } catch (Exception ignored) {
         }
 
         alert.showAndWait();
     }
 
-    // Navigation methods defined in FXML
+    @FXML
+    void redirectToDemande(ActionEvent event) {
+        navigateToFXML(event, "/fxml/DemandeDashboard.fxml", "Erreur de Navigation", "Impossible d'ouvrir la page de demande");
+    }
+
+    @FXML
+    void redirectToRendezVous(ActionEvent event) {
+        navigateToFXML(event, "/fxml/rendez-vous-view.fxml", "Erreur de Navigation", "Impossible d'ouvrir la page de rendez-vous");
+    }
+
+    @FXML
+    void redirectProduit(ActionEvent event) {
+        navigateToFXML(event, "/fxml/front/showProduit.fxml", "Erreur de Navigation", "Impossible d'ouvrir la page des produits");
+    }
+
+    @FXML
+    void viewDoctors(ActionEvent event) {
+        if (!SessionManager.getInstance().isLoggedIn()) {
+            showAlert(Alert.AlertType.ERROR, "Erreur", "Utilisateur non connecté", "Vous devez être connecté pour accéder à cette page.");
+            return;
+        }
+        navigateToFXML(event, "/fxml/DoctorList.fxml", "Erreur de Navigation", "Impossible d'ouvrir la page des médecins");
+    }
+
     @FXML
     void navigateToHome() {
-        try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/Home.fxml"));
-            Parent root = loader.load();
-            Scene scene = new Scene(root);
-            Stage stage = (Stage) anchorPane.getScene().getWindow();
-            stage.setScene(scene);
-            stage.show();
-        } catch (IOException e) {
-            e.printStackTrace();
-            showAlert(Alert.AlertType.ERROR, "Navigation Error", "Error navigating to Home", e.getMessage());
+        navigateToFXML("/views/Home.fxml", "Navigation Error", "Error navigating to Home");
+    }
+
+    @FXML
+    void navigateToHistoriques() {
+        if (!SessionManager.getInstance().isLoggedIn()) {
+            showAlert(Alert.AlertType.ERROR, "Erreur", "Utilisateur non connecté", "Vous devez être connecté pour accéder à cette page.");
+            return;
         }
+        navigateToFXML("/fxml/front/historiques.fxml", "Navigation Error", "Error navigating to historiques", "Historiques");
+    }
+
+    @FXML
+    void navigateToTraitement() {
+        if (!SessionManager.getInstance().isLoggedIn()) {
+            showAlert(Alert.AlertType.ERROR, "Erreur", "Utilisateur non connecté", "Vous devez être connecté pour accéder à cette page.");
+            return;
+        }
+        navigateToFXML("/fxml/front/traitement.fxml", "Navigation Error", "Error navigating to traitement", "Traitement");
+    }
+
+    @FXML
+    void navigateToContact() {
+        navigateToFXML("/fxml/front/contact.fxml", "Navigation Error", "Error navigating to contact", "Contact");
     }
 
     @FXML
     void navigateToProfile() {
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/Profile.fxml"));
-            Parent root = loader.load();
-            Scene scene = new Scene(root);
-            Stage stage = (Stage) anchorPane.getScene().getWindow();
-            stage.setScene(scene);
-            stage.show();
-        } catch (IOException e) {
-            e.printStackTrace();
+            SessionManager session = SessionManager.getInstance();
+            String userType = session.getUserType();
+            String fxmlPath;
+
+            switch (userType) {
+                case "admin" -> fxmlPath = "/fxml/AdminDashboard.fxml";
+                case "medecin" -> fxmlPath = "/fxml/medecin_profile.fxml";
+                case "patient" -> fxmlPath = "/fxml/patient_profile.fxml";
+                default -> {
+                    showAlert(Alert.AlertType.ERROR, "Error", "User type not recognized", "Cannot navigate to profile page for unknown user type.");
+                    return;
+                }
+            }
+
+            navigateToFXML(fxmlPath, "Navigation Error", "Error navigating to Profile");
+        } catch (Exception e) {
+            LOGGER.severe("Error navigating to profile: " + e.getMessage());
             showAlert(Alert.AlertType.ERROR, "Navigation Error", "Error navigating to Profile", e.getMessage());
         }
     }
 
     @FXML
     void navigateToShop() {
-        // Since we're already in the shop view, we can just refresh
-        loadAllProducts();
-        renderProductsPage(1);
-        createPagination();
+        navigateToFXML("/fxml/front/showCartItem.fxml", "Navigation Error", "Error navigating to shop", "Shop");
     }
 
     @FXML
     void commande(ActionEvent event) {
-
         try {
-            // Make sure to provide the correct path to your FXML file
+            // Use SceneManager to load the new scene in full screen
+            SceneManager.loadScene("/fxml/front/showCartItem.fxml", event);
+
+        } catch (Exception e) {
+            LOGGER.severe("Error navigating to commande: " + e.getMessage());
+            showAlert(Alert.AlertType.ERROR, "Navigation Error",
+                    "Error navigating to commande form", e.getMessage());
+        }
+    }
+
+    @FXML
+    void navigateToFavorites() {
+        navigateToFXML("/fxml/front/favoris.fxml", "Navigation Error", "Error navigating to favorites", "Mes Favoris");
+    }
+
+    @FXML
+    void navigateToCommandes() {
+        try {
             URL fxmlLocation = getClass().getResource("/fxml/front/showCommande.fxml");
             if (fxmlLocation == null) {
-                throw new IllegalStateException("FXML file not found!");
+                fxmlLocation = getClass().getResource("/front/showCommande.fxml");
+                if (fxmlLocation == null) {
+                    throw new IllegalStateException("FXML file not found at /fxml/front/showCommande.fxml or /front/showCommande.fxml");
+                }
             }
+            navigateToFXML(fxmlLocation.toString(), "Navigation Error", "Error navigating to commandes", "Mes Commandes");
+        } catch (Exception e) {
+            LOGGER.severe("Error navigating to commandes: " + e.getMessage());
+            showAlert(Alert.AlertType.ERROR, "Navigation Error", "Error navigating to commandes", "Could not load the commandes page: " + e.getMessage());
+        }
+    }
+
+    private void navigateToFXML(String fxmlPath, String errorTitle, String errorHeader) {
+        navigateToFXML(fxmlPath, errorTitle, errorHeader, null);
+    }
+
+    private void navigateToFXML(String fxmlPath, String errorTitle, String errorHeader, String stageTitle) {
+        try {
+            URL fxmlLocation = getClass().getResource(fxmlPath);
+            if (fxmlLocation == null) {
+                throw new IllegalStateException("FXML file not found: " + fxmlPath);
+            }
+
             FXMLLoader loader = new FXMLLoader(fxmlLocation);
             Parent root = loader.load();
             Scene scene = new Scene(root);
-            Stage stage = new Stage();
+            Stage stage = (Stage) anchorPane.getScene().getWindow();
             stage.setScene(scene);
-            stage.setTitle("Ajouter une commande");
+            if (stageTitle != null) {
+                stage.setTitle(stageTitle);
+            }
+            setStageSize(stage);
             stage.show();
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.severe(errorHeader + ": " + e.getMessage());
+            showAlert(Alert.AlertType.ERROR, errorTitle, errorHeader, e.getMessage());
         }
+    }
 
+    private void navigateToFXML(ActionEvent event, String fxmlPath, String errorHeader, String errorContent) {
+        try {
+            if (SessionManager.getInstance().getCurrentUser() == null) {
+                showAlert(Alert.AlertType.ERROR, "Erreur", "Utilisateur non connecté", "Vous devez être connecté pour accéder à cette page.");
+                return;
+            }
 
-    }}
+            SessionManager.getInstance().setCurrentUser(SessionManager.getInstance().getCurrentUser(), "patient");
+            FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlPath));
+            Parent root = loader.load();
+            Scene scene = new Scene(root);
+            Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
+            stage.setScene(scene);
+            stage.show();
+        } catch (Exception e) {
+            showAlert(Alert.AlertType.ERROR, "Erreur", errorHeader, errorContent + ": " + e.getMessage());
+            LOGGER.severe(errorHeader + ": " + e.getMessage());
+        }
+    }
+}
